yaml/blue-green-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  selector:
    app: blue-green
    colour: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: blue-green
    colour: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
